changed CreateFile to FileManager class